http://winmerge.org/tracker/[tracker-id]

WinMerge 2.11.1.9
  Update Python syntax highlight keywords for Python 2.6 (#2473375)
  More accurate visible area rect in location pane (#2479804)
  New options page for Shell Integration options (#2433648)
  Remove Frhed hex editor from GUI (context menu) (r6376)
  Register.bat should use Find with full path (#2536582)
  Bugfix: Could not open project file that contains an ampersand 
    character in folder names (#2372000)
  Bugfix: File compare method "Modified Date and Size" ignored file size
    (#2455595)
  BugFix: Quick compare didn't ignore EOL differences (#2433677)
  Bugfix: Remove EOL characters from command line (#2458728)
  Bugfix: Merging one line diff to empty other side didn't work (#2456399)
  Bugfix: Location pane was empty for some files with diffs (#2459234)
  Bugfix: Line filter editing didn't update edit box when editing was
   canceled by ESC key (#2493935)
  Bugfix: Wrong number shown for difference when using line filters (#2493980)
  Bugfix: Crashed if compared file disappeared during file compare (#2493945)
  Bugfix: Creating new files caused message about missing files (#2515875)
  Bugfix: Could not hide folders in recursive compare (#2528749)
  Bugfix: Folder Compare:Copy Right/Left don't create folder
  Bugfix: Must Show Different to Show L/R Unique (#2129561)
  Bugfix: Could not copy files from right to left (#2556904)
  Bugfix: Don't show file name extension for folders (#2563314)
  Translation updates:
  - Brazilian (#2461443, #2524796)
  - Chinese Traditional (#2540115)
  - Czech (r6201)
  - Dutch (#2481022, #2494378, #2499994)
  - French (#2551043, #2551066)
  - Swedish (#2452467, #2465385, #2511043)

WinMerge 2.12.x (R2_12) branch created (r6202)

WinMerge 2.11.1.8 - 2008-12-19 (r6200)
  Allow reloading the file if it has been changed on the disk
    behind WinMerge (#2354125)
  Add option to show Open-dialog on WinMerge startup (#2327424)